--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "type": "git",
     "url": "git://github.com/ftlabs/delegate.git"
   },
+  "scripts" : {
+    "test" : "node_modules/.bin/buster-test -c _tests/buster.js"
+  },
   "keywords": [
     "delegate",
     "dom",
