--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "dom-delegate",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "author": "FT Labs <enquiries@labs.ft.com> (http://labs.ft.com/)",
   "description": "Create and manage a DOM event delegator.",
   "contributors": [
     "Matthew Caruana Galizia",
-    "Sam Giles"
+    "Sam Giles",
+    "Matthew Andrews"
   ],
   "main": "lib/delegate.js",
   "repository": {
