--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "node": "*"
   },
   "scripts": {
-    "test": "./node_modules/.bin/grunt buster"
+    "test": "./node_modules/.bin/buster test"
   },
   "keywords": [
     "delegate",
