--- a/package.json
+++ b/package.json
@@ -33,5 +33,5 @@
     "grunt-contrib-uglify": "~0.1.2"
   },
   "license": "MIT",
-  "homepage": "https://github.com/ftlabs/dom-delegate"
+  "homepage": "https://github.com/ftlabs/ftdomdelegate"
 }
