--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "grunt-cli": "~0.1.8",
     "grunt-buster": "~0.1.2",
     "grunt-browserify": "1.0.2",
-    "grunt-contrib-uglify": "~0.1.2"
+    "grunt-contrib-uglify": "~0.1.2",
+    "istanbul": "*",
+    "buster-istanbul": "*"
   },
   "license": "MIT",
   "homepage": "https://github.com/ftlabs/ftdomdelegate"
