--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
-  "name": "ftdomdelegate",
+  "name": "dom-delegate",
   "description": "Create and manage a DOM event delegator.",
   "main": "lib/delegate.js",
-  "ignore": ["test", "GruntFile.js", ".npmignore", ".gitignore", "README.md", "package.json"],
+  "ignore": ["test", "GruntFile.js", ".npmignore", ".gitignore", "README.md", "component.json", "package.json"],
   "license": "MIT"
 }
