--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,6 @@
   "name": "ftdomdelegate",
   "description": "Create and manage a DOM event delegator.",
   "main": "lib/delegate.js",
-  "ignore": [".github", "test", ".npmignore", ".gitignore", "GruntFile.js", "package.json"],
+  "ignore": [".github", "test", ".npmignore", ".gitignore", "GruntFile.js"],
   "license": "MIT"
 }
