Improve conformance with the Origami specification.
- Update status from active to maintained.
- Update code to pass `obt verify`.
- Update tests to run with `obt test`.
- Remove dev dependencies.
- Remove grunt task runner.
- Update the folder structure.
- Remove travis ci config.
- Add circle config. ftdomdelegate can now deploy to npm on tag.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
-node_modules
-lcov-report
-lcov.info
-npm-debug.log
-/build
+.DS_Store
+.env
+/.sass-cache/
+/bower_components/
+/node_modules/
+/build/
+.idea/
+/demos/local
+/coverage
