add eslint config to repo to have it integrate with editor eslint plugins

--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "dom",
     "events"
   ],
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "eslint-config-origami-component": "^2.0.1"
+  }
 }
