--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "eslint-config-origami-component": "^2.0.1"
+    "eslint-config-origami-component": "^2.0.1",
+    "origami-ci-tools": "^1.3.8"
   }
 }
