use browser field instead of main field to indicate this is clientside code

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     ],
     "license": "MIT",
     "main": "main.js",
+    "browser": "main.js",
     "devDependencies": {
         "eslint": "^7.9.0",
         "eslint-config-origami-component": "^2.1.0",
