add licence, type, export-map, and type definitions

--- a/package.json
+++ b/package.json
@@ -14,8 +14,15 @@
         "Sam Giles",
         "Matt Andrews"
     ],
+    "type": "module",
+    "exports": {
+        ".": {
+            "browser": "./main.js"
+        }
+    },
     "main": "main.js",
-    "browser": "main.js",
+    "browser": "./main.js",
+    "types": "types",
     "devDependencies": {
         "eslint": "^7.9.0",
         "eslint-config-origami-component": "^2.1.0",
