--- a/package.json
+++ b/package.json
@@ -30,11 +30,12 @@
   },
   "main": "main.js",
   "browser": "./main.js",
-  "types": "types",
+  "types": "./types/main.d.ts",
   "devDependencies": {
     "eslint": "^7.9.0",
     "eslint-config-origami-component": "^2.1.0",
-    "origami-ci-tools": "^2.1.0"
+    "origami-ci-tools": "^2.1.0",
+    "typescript": "^4.0.5"
   },
   "publishConfig": {
     "registry": "https://origami-npm-registry-prototype.herokuapp.com"
