--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ftdomdelegate",
   "description": "FT's dom delegate library is a library for creating and binding to events on all target elements matching the given selector.",
   "browser": "main.js",
+  "type": "module",
   "author": "FT Labs <enquiries@labs.ft.com> (http://labs.ft.com/)",
   "contributors": [
     "Matthew Caruana Galizia",
@@ -16,10 +17,24 @@
   ],
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.13.16",
+    "@babel/preset-env": "^7.13.15",
     "eslint": "^7.25.0",
     "eslint-config-origami-component": "^2.1.1",
+    "karma": "^6.3.2",
+    "karma-babel-preprocessor": "^8.0.1",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-esbuild": "^2.1.3",
+    "karma-mocha": "^2.0.1",
+    "karma-sourcemap-loader": "^0.3.8",
+    "mocha": "^8.3.2",
+    "proclaim": "^3.6.0",
     "remark": "^13.0.0",
     "remark-lint": "^8.0.0",
-    "remark-preset-lint-origami-component": "^2.0.0-beta.1"
+    "remark-preset-lint-origami-component": "^2.0.0-beta.1",
+    "sinon": "^10.0.0"
+  },
+  "scripts": {
+    "test": "karma start karma.config.cjs"
   }
 }
