update to node14

--- a/package.json
+++ b/package.json
@@ -36,5 +36,9 @@
   },
   "scripts": {
     "test": "karma start karma.config.cjs"
+  },
+  "volta": {
+    "node": "14.16.1",
+    "npm": "7.11.1"
   }
 }
