--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "proclaim": "^3.6.0",
     "remark": "^13.0.0",
     "remark-lint": "^8.0.0",
-    "remark-preset-lint-origami-component": "^2.0.0-beta.1",
+    "remark-preset-lint-origami-component": "^2.0.0",
     "sinon": "^10.0.0"
   },
   "scripts": {
